# docling-api

./: .gitignore  Dockerfile  Jenkinsfile  README.md  docker-compose.cpu.yml  docker-compose.gpu.yml  main.py  pyproject.toml
.aws/: credentials.example
k8s/dev/: values.yaml
k8s/prod/: values.yaml
src/doc_parser/: route.py  service.py  settings.py  utils.py
src/document_converter/: route.py  schema.py  service.py  settings.py  utils.py
