[tool.poetry]
name = "doc_parser"
version = "0.1.0"
description = ""
authors = ["Atrix <vuong.nguyen@atrix.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.4"
uvicorn = "^0.32.0"
docling = "^2.4.0"
python-multipart = "^0.0.17"
gunicorn = "^23.0.0"
boto3 = "^1.35.64"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
